<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHealth2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@android:color/darker_gray"
        android:text="@string/tvHealth2Txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clBillNotification" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBillNotification"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        app:layout_constraintTop_toBottomOf="@+id/clServieceState"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="264dp">


        <!--android:gravity="center_vertical" -->


        <ImageView
            android:id="@+id/imBillNotification"
            android:layout_width="65dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/billmessages" />

        <TextView
            android:id="@+id/tvMessagesNumBillNotification"
            android:layout_width="47dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_error"
            android:gravity="center"
            android:text="3"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivMessagesArrowRight"
            app:layout_constraintStart_toEndOf="@+id/tvBillNotoficationHeader"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvBillNotoficationHeader"
            android:layout_width="197dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/tvBillNotoficationHeaderTxt"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imBillNotification"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTextMessNotificationBillNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/tvTextMessNotificationBillNotificationTxt"
            android:textSize="10sp"
            app:autoSizeMaxTextSize="@android:dimen/app_icon_size"
            app:autoSizeTextType="none"
            app:layout_constraintStart_toEndOf="@+id/imBillNotification"
            app:layout_constraintTop_toBottomOf="@+id/tvBillNotoficationHeader" />

        <ImageView
            android:id="@+id/ivMessagesArrowRight"
            android:layout_width="19dp"
            android:layout_height="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_right" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="343dp"
        android:layout_height="33dp"
        android:background="@color/black"
        android:text="@string/tvHeaderTxt"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivSettingsIconHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        tools:layout_editor_absoluteX="158dp">


    </SearchView>

    <TextView
        android:id="@+id/tvHealth"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@android:color/darker_gray"
        android:text="@string/tvHealthTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMessages"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHealth">

        <!--android:gravity="center_vertical" -->


        <ImageView
            android:id="@+id/imMessageCenter"
            android:layout_width="65dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/messagecenter" />

        <TextView
            android:id="@+id/tvMessagesNumMessCenter"
            android:layout_width="47dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:text="6"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivMessagesArrowRightMessageCenter"
            app:layout_constraintStart_toEndOf="@+id/tvMessCenterHeader"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMessCenterHeader"
            android:layout_width="197dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/tv_MessCenterHeaderTxt"
            app:layout_constraintStart_toEndOf="@+id/imMessageCenter"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTextMessNotificationMessCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/tvTextMessNotificationMessCenterTxt"
            android:textSize="10sp"
            app:autoSizeMaxTextSize="@android:dimen/app_icon_size"
            app:autoSizeTextType="none"
            app:layout_constraintStart_toEndOf="@+id/imMessageCenter"
            app:layout_constraintTop_toBottomOf="@+id/tvMessCenterHeader" />

        <ImageView
            android:id="@+id/ivMessagesArrowRightMessageCenter"
            android:layout_width="19dp"
            android:layout_height="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_right" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clServieceState"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clMessages"
        app:layout_constraintVertical_bias="0.263">

        <!--android:gravity="center_vertical" -->


        <ImageView
            android:id="@+id/imServiceState"
            android:layout_width="65dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/servicealive" />

        <TextView
            android:id="@+id/tvMessagesNumServicestate"
            android:layout_width="47dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_error"
            android:gravity="center"
            android:text="3"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivMessagesArrowRightServiceState"
            app:layout_constraintStart_toEndOf="@+id/tvServiceStateHeader"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvServiceStateHeader"
            android:layout_width="197dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/tvServiceStateHeaderTxt"
            app:layout_constraintStart_toEndOf="@+id/imServiceState"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTextMessNotificationServiceState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/tvTextMessNotificationServiceStateTxt"
            android:textSize="10sp"
            app:autoSizeMaxTextSize="@android:dimen/app_icon_size"
            app:autoSizeTextType="none"
            app:layout_constraintStart_toEndOf="@+id/imServiceState"
            app:layout_constraintTop_toBottomOf="@+id/tvServiceStateHeader" />

        <ImageView
            android:id="@+id/ivMessagesArrowRightServiceState"
            android:layout_width="19dp"
            android:layout_height="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_right" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="376dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHealth2">

        <ImageView
            android:id="@+id/ivUsers"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            app:layout_constraintEnd_toStartOf="@id/ivGroups"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/users" />

        <ImageView
            android:id="@+id/ivGroups"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/groups" />

        <ImageView
            android:id="@+id/ivBills"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            app:layout_constraintStart_toEndOf="@+id/ivGroups"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bill" />

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivThemes"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/settings" />

        <ImageView
            android:id="@+id/ivThemes"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/theme" />

        <ImageView
            android:id="@+id/ivSupport"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivThemes"



            app:srcCompat="@drawable/support" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivSettingsIconHeader"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_icon_header" />

</androidx.constraintlayout.widget.ConstraintLayout>